Add OpenAPI/Swagger documentation
