# .vscode/openapi.yml
@@ -1,13 +1,188 @@
-openapi: '3.0.2'
+openapi: "3.0.2"
 info:
-  title: placeholder.app API
-  version: '1.0'
+  title: placeholder.app API documentation
+  version: "1.0"
 servers:
   - url: https://api.placeholder.app
   - url: http://localhost:8080
 paths:
-  /test:
+  /fonts:
     get:
+      summary: List supported image fonts
+      description: Returns a list of all supported placeholder image fonts usable. No parameters supported.
       responses:
-        '200':
-          description: OK
+        "200":
+          description: Successful query
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  status:
+                    type: string
+                    example: OK
+                  fonts:
+                    type: array
+                    example: ["Sans-Serif"]
+  /status:
+    get:
+      summary: Output current service status
+      description: Returns a JSON object with information pertaining to the current service status
+      responses:
+        "200":
+          description: Successful query
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  status:
+                    type: string
+                    example: OK
+                  notice:
+                    type: string
+                    example: Update to backend API releasing on 2022-12-24.
+  /image/{size}:
+    get:
+      summary: Output a placeholder image
+      description: Returns a placeholder image defined by the path parameters.
+      parameters:
+        - name: size
+          in: path
+          required: true
+          schema:
+            type: string
+            example: 400x400
+            description: >
+              A WxH string deliniated by "x"
+              Width and Height are integers, must be no larger than 4000px and no smaller than 30px
+              Width and Height will be rounded to the nearest 5px
+        - name: text
+          in: query
+          required: false
+          schema:
+            type: string
+            example: Hello World
+            description: An optional query parameter containing text to place at the center of the image
+        - name: font
+          in: query
+          required: false
+          schema:
+            type: string
+            example: Sans-Serif
+            description: An optional query parameter containing the font-family to use during image generation. See /fonts
+      responses:
+        "200":
+          description: Successful query
+          content:
+            application/json:
+              schema:
+                type: object
+                description: Base64 encoded image output.
+        "400":
+          description: The parameters passed are invalid or unacceptable.
+        "500":
+          description: An unknown server error occured, retry later.
+  /image/{size}/{bgColor}:
+    get:
+      summary: Output a placeholder image
+      description: Returns a placeholder image defined by the path parameters.
+      parameters:
+        - name: size
+          in: path
+          required: true
+          schema:
+            type: string
+            example: 400x400
+            description: >
+              A WxH string deliniated by "x"
+              Width and Height are integers, must be no larger than 4000px and no smaller than 30px
+              Width and Height will be rounded to the nearest 5px
+        - name: bgColor
+          in: path
+          required: true
+          schema:
+            type: string
+            example: 3B3B3B
+            description: A HEX string containing the desired background color for the image. Must not contain the hash-prefix ("#3b3b3b")
+        - name: text
+          in: query
+          required: false
+          schema:
+            type: string
+            example: Hello World
+            description: An optional query parameter containing text to place at the center of the image
+        - name: font
+          in: query
+          required: false
+          schema:
+            type: string
+            example: Sans-Serif
+            description: An optional query parameter containing the font-family to use during image generation. See /fonts
+      responses:
+        "200":
+          description: Successful query
+          content:
+            application/json:
+              schema:
+                type: object
+                description: Base64 encoded image output.
+        "400":
+          description: The parameters passed are invalid or unacceptable.
+        "500":
+          description: An unknown server error occured, retry later.
+  /image/{size}/{bgColor}/{txtColor}:
+    get:
+      summary: Output a placeholder image
+      description: Returns a placeholder image defined by the path parameters.
+      parameters:
+        - name: size
+          in: path
+          required: true
+          schema:
+            type: string
+            example: 400x400
+            description: >
+              A WxH string deliniated by "x"
+              Width and Height are integers, must be no larger than 4000px and no smaller than 30px
+              Width and Height will be rounded to the nearest 5px
+        - name: bgColor
+          in: path
+          required: true
+          schema:
+            type: string
+            example: 3B3B3B
+            description: A HEX string containing the desired background color for the image. Must not contain the hash-prefix ("#3b3b3b")
+        - name: txtColor
+          in: path
+          required: true
+          schema:
+            type: string
+            example: FFFFFF
+            description: A HEX string containing the desired text color for the image. Must not contain the hash-prefix ("#FFFFFF")
+        - name: text
+          in: query
+          required: false
+          schema:
+            type: string
+            example: Hello World
+            description: An optional query parameter containing text to place at the center of the image
+        - name: font
+          in: query
+          required: false
+          schema:
+            type: string
+            example: Sans-Serif
+            description: An optional query parameter containing the font-family to use during image generation. See /fonts
+      responses:
+        "200":
+          description: Successful query
+          content:
+            application/json:
+              schema:
+                type: object
+                description: Base64 encoded image output.
+        "400":
+          description: The parameters passed are invalid or unacceptable.
+        "500":
+          description: An unknown server error occured, retry later.
